--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,8 @@ NOTION_TOKEN=""              # Notion API token for accessing Notion data
 NOTION_DATABASE_ID=""        # Notion database ID for accessing a specific Notion database
 
 # Telegram bot setup
-TELEGRAM_TOKEN=""            # Telegram bot token for Telegram Bot API authentication
-CHAT_ID=""                   # Telegram chat ID for targeting specific conversations with the bot
+TELEGRAM_TOKEN="7809818333:AAGQnS2AcXjGijsCtK1mGPBogsJvZee1w8I"            # Telegram bot token for Telegram Bot API authentication
+CHAT_ID="1176760155"                   # Telegram chat ID for targeting specific conversations with the bot
 
 # Slack bot setup
 SLACK_BOT_TOKEN=""           # Slack bot token for Slack API authentication
@@ -36,3 +36,6 @@ SLACK_CHANNEL_ID=""          # Slack channel ID for targeting a specific channel
 TWILIO_ACCOUNT_SID=""        # Twilio Account SID for WhatsApp API authentication
 TWILIO_AUTH_TOKEN=""         # Twilio Auth Token for WhatsApp API authentication
 FROM_WHATSAPP_NUMBER="whatsapp:+"  # Twilio WhatsApp number for sending messages (in the format 'whatsapp:+<number>')
+
+agent-708@wise-key-455914-a0.iam.gserviceaccount.com 
+
