--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+credentials.json
+token.json
+client_secret_385103121745-s51pq72v49h4logq1gr8tnki5sl4ogjs.apps.googleusercontent.com.json
